--- a/Client/dockerfile
+++ b/Client/dockerfile
@@ -1,15 +1,13 @@
-FROM node:alpine
+FROM node:13
 
-RUN mkdir /app
+WORKDIR /usr/src/app
 
-WORKDIR /app
-
-COPY package.json /app
+COPY package*.json ./
 
 RUN npm install
 
-COPY . /app
+COPY . .
 
-EXPOSE 80
+EXPOSE 3000
 
-CMD ["npm","start"]
+CMD ["npm", "start"]
