--- a/Server/dockerfile
+++ b/Server/dockerfile
@@ -1,16 +1,12 @@
-# create a file named Dockerfile
+FROM node:13
 
-FROM node:alpine
+WORKDIR /usr/src/app
 
-RUN mkdir /app
-
-WORKDIR /app
-
-COPY package.json /app
+COPY package*.json ./
 
 RUN npm install
 
-COPY . /app
+COPY . .
 
 EXPOSE 8080
 
